# fastapi-react-example

./: README.md
backend/: pyproject.toml
backend/algorithms/yolov8/detect/: none_detect.py  xianxu_detect.py
backend/app/: main.py
backend/cameras/hik/: BasicDemo.py  BasicDemoLineScanCamera.py  HikCameraOperation_class.py  hik_DetctCamera.py  hik_Grab.py  hik_OpenClose.py  hik_Setting.py  hik_connect.py  image_gen.py
backend/cameras/hik/MvImport/: CameraParams_header.py  MvCameraControl_class.py
backend/cameras/hik/Runtime/Win32_i86/: CommonParameters.ini  MvDSS2.ax  MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti
backend/cameras/hik/Runtime/Win64_x64/: MvDSS2.ax  MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti
backend/cameras/local_image/: image_gen.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/algorithms/: page.tsx
frontend/app/display/: page.tsx
frontend/app/flows/: page.tsx
frontend/app/hardware/: page.tsx
frontend/app/plugins/: page.tsx
frontend/app/project/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tools/: page.tsx
frontend/components/: app-sidebar.tsx  image-display.tsx  nav-user.tsx  stream-display.tsx
frontend/lib/: api.ts
shadcn-admin/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
shadcn-admin/src/components/: stream-display.tsx
shadcn-admin/src/components/layout/data/: sidebar-data.ts
shadcn-admin/src/features/dashboard/: index.tsx
(+1 files in other folders)
